add sticky bar and refactor slider

--- a/stickyOK/deneme.html
+++ b/stickyOK/deneme.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body style="background-color: azure">
-    <header class="header sticky" id="header sticky">
+    <header class="header sticky" id="sticky">
       <div class="logo">LOGO</div>
       <div class="menu" id="menubar">
         <ul>
