--- a/website10/index.html
+++ b/website10/index.html
@@ -17,120 +17,122 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <div class="logo-box">
-          <img src="img/logo.png" alt="" />
-        </div>
-        <div class="menu-box">
-          <ul class="menu-items">
-            <li class="menu-item">
-              <span>
-                <a href="#">what is pickleball?</a>
-              </span>
-              <ul class="submenu">
-                <li class="submenu-item">
-                  <span>
-                    <a href="#">what is pickleball?</a>
-                  </span>
-                </li>
-                <li class="submenu-item">
-                  <span>
-                    <a href="#">how to play</a>
-                  </span>
-                </li>
-                <li class="submenu-item">
-                  <span>
-                    <a href="#">official rules</a>
-                  </span>
-                </li>
-                <li class="submenu-item">
-                  <span>
-                    <a href="#">pickleball courts & construction</a>
-                  </span>
-                </li>
-                <li class="submenu-item">
-                  <span>
-                    <a href="#">history of the game</a>
-                  </span>
-                </li>
-              </ul>
-            </li>
-            <li class="menu-item">
-              <span>
-                <a href="#">play</a>
-              </span>
-            </li>
-            <li class="menu-item">
-              <span>
-                <a href="#">memberships</a>
-              </span>
-            </li>
-            <li class="menu-item">
-              <span>
-                <a href="#">tournaments</a>
-              </span>
-            </li>
-            <li class="menu-item">
-              <span>
-                <a href="#">get involved</a>
-              </span>
-            </li>
-            <li class="menu-item">
-              <span>
-                <a href="#">about us</a>
-              </span>
-            </li>
-          </ul>
-        </div>
-        <!-- ****************LOGIN BOX BELOW*************** -->
-        <div class="login-box">
-          <div class="shop-login-search-box"></div>
-          <ul class="shop-login-search-box-items">
-            <li class="shop-login-search-box-item">
-              <span>
-                <div class="icon">
-                  <i class="fa-solid fa-cart-shopping"></i>
-                </div>
-                <a href="#">shop</a>
-              </span>
-            </li>
-            <li class="shop-login-search-box-item">
-              <span>
-                <div class="icon">
-                  <i class="fa-solid fa-right-to-bracket"></i>
-                </div>
-                <a href="#">login</a>
-              </span>
-            </li>
-            <li class="shop-login-search-box-item">
-              <span>
-                <div class="icon">
-                  <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-                <a href="#">search</a>
-              </span>
-            </li>
-          </ul>
-          <div class="join-renew-box">
-            <ul class="join-renew-box-items">
-              <li class="join-renew-box-item join-renew-box-item-join">
+    <div class="header-container fixed">
+      <header class="header sticky" id="sticky">
+        <nav>
+          <div class="logo-box">
+            <img src="img/logo.png" alt="" />
+          </div>
+          <div class="menu-box">
+            <ul class="menu-items">
+              <li class="menu-item">
                 <span>
-                  <a href="#">join</a>
+                  <a href="#">what is pickleball?</a>
+                </span>
+                <ul class="submenu">
+                  <li class="submenu-item">
+                    <span>
+                      <a href="#">what is pickleball?</a>
+                    </span>
+                  </li>
+                  <li class="submenu-item">
+                    <span>
+                      <a href="#">how to play</a>
+                    </span>
+                  </li>
+                  <li class="submenu-item">
+                    <span>
+                      <a href="#">official rules</a>
+                    </span>
+                  </li>
+                  <li class="submenu-item">
+                    <span>
+                      <a href="#">pickleball courts & construction</a>
+                    </span>
+                  </li>
+                  <li class="submenu-item">
+                    <span>
+                      <a href="#">history of the game</a>
+                    </span>
+                  </li>
+                </ul>
+              </li>
+              <li class="menu-item">
+                <span>
+                  <a href="#">play</a>
                 </span>
               </li>
-              <li class="join-renew-box-item join-renew-box-item-renew">
+              <li class="menu-item">
                 <span>
-                  <a href="#">renew</a>
+                  <a href="#">memberships</a>
+                </span>
+              </li>
+              <li class="menu-item">
+                <span>
+                  <a href="#">tournaments</a>
+                </span>
+              </li>
+              <li class="menu-item">
+                <span>
+                  <a href="#">get involved</a>
+                </span>
+              </li>
+              <li class="menu-item">
+                <span>
+                  <a href="#">about us</a>
                 </span>
               </li>
             </ul>
           </div>
-        </div>
+          <!-- ****************LOGIN BOX BELOW*************** -->
+          <div class="login-box">
+            <div class="shop-login-search-box"></div>
+            <ul class="shop-login-search-box-items">
+              <li class="shop-login-search-box-item">
+                <span>
+                  <div class="icon">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                  </div>
+                  <a href="#">shop</a>
+                </span>
+              </li>
+              <li class="shop-login-search-box-item">
+                <span>
+                  <div class="icon">
+                    <i class="fa-solid fa-right-to-bracket"></i>
+                  </div>
+                  <a href="#">login</a>
+                </span>
+              </li>
+              <li class="shop-login-search-box-item">
+                <span>
+                  <div class="icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                  </div>
+                  <a href="#">search</a>
+                </span>
+              </li>
+            </ul>
+            <div class="join-renew-box">
+              <ul class="join-renew-box-items">
+                <li class="join-renew-box-item join-renew-box-item-join">
+                  <span>
+                    <a href="#">join</a>
+                  </span>
+                </li>
+                <li class="join-renew-box-item join-renew-box-item-renew">
+                  <span>
+                    <a href="#">renew</a>
+                  </span>
+                </li>
+              </ul>
+            </div>
+          </div>
 
-        <!-- **************LOGIN BOX ABOVE*********** -->
-      </nav>
-    </header>
+          <!-- **************LOGIN BOX ABOVE*********** -->
+        </nav>
+      </header>
+    </div>
     <!-- SLIDER AŞAĞIDA -->
     <div class="slide-container">
       <div class="slider">
@@ -244,7 +246,7 @@
       <button class="nextBtn buttons">Sonraki</button>
     </div>
     <!-- SLIDER YUKARIDA -->
-    <script src="script.js" defer></script>
+
     <div class="content-row-1">
       <div class="content-row-1-left content-box">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex modi vitae
@@ -254,5 +256,6 @@
       </div>
       <div class="content-row-1-right content-box"></div>
     </div>
+    <script src="script.js" defer></script>
   </body>
 </html>
