--- a/responsiveWebDesign/responsive1/index.html
+++ b/responsiveWebDesign/responsive1/index.html
@@ -11,18 +11,24 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <div class="logo">LOGO</div>
-        <nav>
-          <div>
-            <ul>
-              <li>HOME</li>
-              <li>PRODUCTS</li>
-              <li>COMPANY</li>
-              <li>CONTACT US</li>
-            </ul>
-          </div>
+      <header class="header nav-open">
+        <nav class="nav-bar">
+          <div class="logo"><a href="#">LOGO</a></div>
+          <ul class="nav-list">
+            <li class="nav-bar-link">
+              <a href="#">HOME</a>
+            </li>
+            <li class="nav-bar-link">
+              <a href="#">PRODUCTS</a>
+            </li>
+            <li class="nav-bar-link"><a href="#">COMPANY</a></li>
+            <li class="nav-bar-link"><a href="#">CONTACT US</a></li>
+          </ul>
         </nav>
+        <button class="btn-mobile-nav">
+          <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+          <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
       </header>
       <main>
         <div class="slider-wrap">
@@ -69,5 +75,13 @@
       </div>
     </div>
     <script src="script.js" defer></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
