integrate responsive design

--- a/responsiveWebDesign/responsive2/index.html
+++ b/responsiveWebDesign/responsive2/index.html
@@ -24,9 +24,15 @@
             <li class="nav-bar-link"><a href="#">COMPANY</a></li>
             <li class="nav-bar-link"><a href="#">CONTACT US</a></li>
           </ul>
-          <button class="mobile-nav-icons">
-            <ion-icon class="menu-icon" name="menu-outline"></ion-icon>
-            <ion-icon class="close-icon" name="close-circle-outline"></ion-icon>
+          <button class="btn-mobile-nav">
+            <ion-icon
+              class="icon-mobile-nav menu-icon"
+              name="menu-outline"
+            ></ion-icon>
+            <ion-icon
+              class="icon-mobile-nav close-icon"
+              name="close-outline"
+            ></ion-icon>
           </button>
         </nav>
       </header>
