--- a/website11PlusResponsive/index.html
+++ b/website11PlusResponsive/index.html
@@ -334,7 +334,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide1 slides">
@@ -355,7 +355,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide2 slides">
@@ -376,7 +376,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide3 slides">
@@ -397,7 +397,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide4 slides">
@@ -418,7 +418,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide5 slides">
@@ -439,7 +439,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide6 slides">
@@ -460,7 +460,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide7 slides">
@@ -481,7 +481,7 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
             <div class="slide1-clone slides" id="slide1-clone">
@@ -502,12 +502,12 @@
                   explicabo sed temporibus eos consequatur, sunt nobis voluptate
                   enim, accusamus, magni accusantium illo voluptas veritatis sit
                   consequuntur? Modi, quasi? Incidunt, unde?</p>
-                  <a class="read-more" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
+                  <a class="read-more-slide" href="https://google.com.tr/" target=”_blank”>  READ MORE</a>
               </div>
             </div>
           </div>
-          <button class="prevBtn buttons">prev</button>
-          <button class="nextBtn buttons">next</button>
+          <ion-icon class="prevBtn buttons" name="chevron-back-outline"></ion-icon>
+          <ion-icon class="nextBtn buttons" name="chevron-forward-outline"></ion-icon>
         </div>
       </div>
       <!-- SLIDER above -->
